--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "sequelize": "^6.37.5"
+  },
+  "scripts": {
+    "start": "node src/server.js"
   }
 }
