--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social_web",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "frontend": "npm start --prefix frontend",
